# Last-Semester-Project

./: README.md  app.py  backend.py  chapterLinkedList.py  gemini.py  login.py  main.py  profile.py  pyproject.toml  registration.py  requirements.txt  scrape.py  script.py  user.db
.streamlit/: secrets.toml
ADT/: chapterStack.py
script/: login.py  registration.py  script.py
