[project]
name = "last-semester-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "google-genai>=1.47.0",
    "img2pdf>=0.6.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "mysql-connector-python>=9.5.0",
    "networkx>=3.4.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "resend>=2.19.0",
    "selenium>=4.38.0",
    "streamlit>=1.51.0",
    "webdriver-manager>=4.0.2",
]
